--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,8 +2,9 @@
     display: flex;
     max-width: 880px;
     margin: 45px auto 36.25px auto;
-    flex-direction: column;
+    flex-direction: row;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    justify-content: space-between;
 
 }
 
