--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
 @import url(./blocks/main/main.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__menu-button/_opened/header__menu-button_opened.css);
+@import url(./blocks/header/__menu-button/header__menu-button.css);
+@import url(./blocks/header/__menu-item/header__menu-item.css);
+@import url(./blocks/header/__menu-list/header__menu-list.css);
+@import url(./blocks/header/__menu/header__menu.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__add-button/profile__add-button.css);
 @import url(./blocks/profile/__plus/profile__plus.css);
@@ -41,6 +46,9 @@
 @import url(./blocks/popup/__paragraph/popup__paragraph.css);
 @import url(./blocks/popup/__submit/popup__submit.css);
 @import url(./blocks/popup/__submit/_disabled/popup__submit_disabled.css);
+@import url(./blocks/popup/__info-message/_type/popup__info-message_type_fail.css);
+@import url(./blocks/popup/__info-message/_type/popup__info-message_type_success.css);
+@import url(./blocks/popup/__info-message/popup__input-message.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/img-popup/img-popup.css);
@@ -50,4 +58,14 @@
 @import url(./blocks/img-popup/__text/img-popup__text.css);
 @import url(./blocks/img-popup/__cross/img-popup__cross.css);
 @import url(./blocks/img-popup/__cross-button/img-popup__cross-button.css);
+@import url(./blocks/info-popup/__container/info-popup__container.css);
+@import url(./blocks/info-popup/__cross-button/info-popup__cross-button.css);
 @import url(./blocks/element/__image-field/element__image-field.css);
+@import url(./blocks/login/__extra-text/login__extra-text.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__input/login__input.css);
+@import url(./blocks/login/__link/login__link.css);
+@import url(./blocks/login/__submit-button/login__submit-button.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/login.css);
+@import url(./blocks/content/__element/content__element.css);
